--- a/nlp_vectorization.ipynb
+++ b/nlp_vectorization.ipynb
@@ -4739,10 +4739,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         able     abuse   accept    access  according  account  accused  \\\n",
+      "0    0.000000  0.000000  0.00000  0.000000   0.000000      0.0      0.0   \n",
+      "1    0.000000  0.000000  0.00000  0.000000   0.000000      0.0      0.0   \n",
+      "2    0.000000  0.000000  0.00000  0.000000   0.000000      0.0      0.0   \n",
+      "3    0.000000  0.135319  0.13259  0.000000   0.000000      0.0      0.0   \n",
+      "4    0.000000  0.000000  0.00000  0.000000   0.000000      0.0      0.0   \n",
+      "..        ...       ...      ...       ...        ...      ...      ...   \n",
+      "995  0.056569  0.000000  0.00000  0.066106   0.000000      0.0      0.0   \n",
+      "996  0.023227  0.000000  0.00000  0.000000   0.000000      0.0      0.0   \n",
+      "997  0.000000  0.000000  0.00000  0.000000   0.000000      0.0      0.0   \n",
+      "998  0.000000  0.000000  0.00000  0.000000   0.072637      0.0      0.0   \n",
+      "999  0.000000  0.000000  0.00000  0.000000   0.000000      0.0      0.0   \n",
+      "\n",
+      "          act  acting    action  ...  worth   writing     wrong  wrote   xi  \\\n",
+      "0    0.000000     0.0  0.000000  ...    0.0  0.000000  0.000000    0.0  0.0   \n",
+      "1    0.000000     0.0  0.000000  ...    0.0  0.000000  0.000000    0.0  0.0   \n",
+      "2    0.000000     0.0  0.000000  ...    0.0  0.000000  0.000000    0.0  0.0   \n",
+      "3    0.108576     0.0  0.000000  ...    0.0  0.000000  0.130085    0.0  0.0   \n",
+      "4    0.000000     0.0  0.081102  ...    0.0  0.000000  0.000000    0.0  0.0   \n",
+      "..        ...     ...       ...  ...    ...       ...       ...    ...  ...   \n",
+      "995  0.000000     0.0  0.000000  ...    0.0  0.000000  0.000000    0.0  0.0   \n",
+      "996  0.000000     0.0  0.000000  ...    0.0  0.023540  0.000000    0.0  0.0   \n",
+      "997  0.047197     0.0  0.043870  ...    0.0  0.000000  0.000000    0.0  0.0   \n",
+      "998  0.088109     0.0  0.000000  ...    0.0  0.085666  0.000000    0.0  0.0   \n",
+      "999  0.000000     0.0  0.000000  ...    0.0  0.000000  0.000000    0.0  0.0   \n",
+      "\n",
+      "         year  yes      york  young      ypg  \n",
+      "0    0.095097  0.0  0.000000    0.0  0.00000  \n",
+      "1    0.000000  0.0  0.000000    0.0  0.00000  \n",
+      "2    0.000000  0.0  0.000000    0.0  0.00000  \n",
+      "3    0.000000  0.0  0.000000    0.0  0.00000  \n",
+      "4    0.000000  0.0  0.000000    0.0  0.00000  \n",
+      "..        ...  ...       ...    ...      ...  \n",
+      "995  0.029581  0.0  0.000000    0.0  0.00000  \n",
+      "996  0.012146  0.0  0.000000    0.0  0.18146  \n",
+      "997  0.000000  0.0  0.057262    0.0  0.00000  \n",
+      "998  0.088405  0.0  0.000000    0.0  0.00000  \n",
+      "999  0.053835  0.0  0.000000    0.0  0.00000  \n",
+      "\n",
+      "[1000 rows x 1000 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import pandas as pd\n",
+    "import string\n",
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "# Ensure NLTK data is downloaded\n",
+    "nltk.download('punkt', quiet=True)\n",
+    "nltk.download('stopwords', quiet=True)\n",
+    "\n",
+    "# Create a lemmatizer\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "# Define a function to preprocess a single document\n",
+    "def preprocess_document(doc):\n",
+    "    # Tokenize the text\n",
+    "    tokens = word_tokenize(doc)\n",
+    "    \n",
+    "    # Remove punctuation and numbers, and lemmatize\n",
+    "    tokens = [lemmatizer.lemmatize(token) for token in tokens if token.isalpha()]\n",
+    "    \n",
+    "    # Remove stopwords\n",
+    "    tokens = [token for token in tokens if token not in stopwords.words('english')]\n",
+    "    \n",
+    "    # Join the tokens back into a string\n",
+    "    return ' '.join(tokens)\n",
+    "\n",
+    "# Assuming 'corpus' is a DataFrame with a 'body' column containing the documents\n",
+    "corpus['preprocessed'] = corpus['body'].apply(preprocess_document)\n",
+    "\n",
+    "# Create a TfidfVectorizer with specified parameters\n",
+    "tfidf_vectorizer = TfidfVectorizer(max_features=1000, stop_words='english')\n",
+    "\n",
+    "# Fit and transform the preprocessed text to create the DTM\n",
+    "X = tfidf_vectorizer.fit_transform(corpus['preprocessed'])\n",
+    "\n",
+    "# Create a DataFrame to visualize the DTM\n",
+    "df_dtm = pd.DataFrame(X.toarray(), columns=tfidf_vectorizer.get_feature_names_out())\n",
+    "\n",
+    "# Display the DTM\n",
+    "print(df_dtm)\n"
+   ]
   }
  ],
  "metadata": {
